# CopyrightFixer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.conf
Deploy/: CopyrighFixer.json
res/: architecture.qmodel
src/: CMakeLists.txt
src/CFixer/: CMakeLists.txt  main.cpp
src/CopyrighFixer/: CMakeLists.txt  interfaceimplem.cpp  interfaceimplem.h
src/CopyrighFixer/CopyrighFixer/: CopyrighFixer_global.h  bar.cpp  bar.h  config.cpp  config.h  configparser.cpp  configparser.h  copyrighfixer.h  ifilehandler.cpp  ifilehandler.h  ifilemanager.cpp  ifilemanager.h  interfaceimplem.cpp  interfaceimplem.h  owner.cpp  owner.h  sign.cpp  sign.h  signer.cpp  signer.h  worker.cpp  worker.h
src/Example/: CMakeLists.txt
tests/: CMakeLists.txt  tstMain.cpp
tests/units/: cfixertest.cpp  cfixertest.h  configparsertest.cpp  configparsertest.h  interfaceimplemtest.cpp  interfaceimplemtest.h  signertest.cpp  signertest.h  signtest.cpp  signtest.h
